# Polyfit

./: CMakeLists.txt  PolyfitEigen.hpp  main  main.cpp
src/: example.cpp
